--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -113,7 +113,7 @@ body.docs #nav {
     margin: 0;
     padding: 0;
     position: absolute;
-    right: 30px;
+    right: 60px;
     top: 10px;
     height: 40px;
     line-height: 40px;
@@ -502,8 +502,9 @@ a {
 }
 
 .content figure {
-    margin: 1.2em 0;
-    overflow-x:auto 
+    padding: 1em;
+    overflow-x: auto;
+    margin: 0;
 }
 
 .content p,
@@ -532,7 +533,7 @@ a {
 
 .content blockquote {
     margin: 2em 0;
-    padding-left: 20px;
+    padding-left: 10px;
     border-left: 4px solid #4a90e2;
     border-radius: 2px;
 }
@@ -726,7 +727,9 @@ pre {
 .highlight .line {
     line-height: 1.3;
 }
-
+.highlight .code .comment{
+    color: #b3b3b3;
+}
 .highlight .code .addition,
 .highlight .code .meta,
 .highlight .code .string,
@@ -742,15 +745,6 @@ pre {
 .highlight .code .number,
 .highlight .code .regexp {
     color: #31a354;
-}
-
-.highlight .code .keyword,
-.highlight .code .attribute {
-    color: #e96900;
-}
-
-.highlight .code .params {
-    color: #1976d2
 }
 
 pre .class .title {
@@ -775,6 +769,16 @@ pre .prompt {
 .highlight .code .type {
     color: #1976d2;
 }
+.highlight .code .keyword,
+.highlight .code .attribute {
+    color: #e96900;
+}
+
+.highlight .code .params {
+    color: #1976d2
+}
+
+
 /* index footer */
 .wrapper-add {
     min-height: 100%;
@@ -813,6 +817,9 @@ pre .prompt {
         top: 15px;
         right: 20px;
         display: block;
+    }
+    .github-corner{
+        display: none;
     }
     #hexo{
         padding:80px 40px 50px;
@@ -917,4 +924,35 @@ pre .prompt {
         background: rgba(0, 0, 0, 0.5)
 
     }
+}
+
+.github-corner:hover .octo-arm {
+    animation:octocat-wave 560ms ease-in-out
+}
+@keyframes octocat-wave {
+    0%, 100% {
+        transform:rotate(0)
+    }
+    20%, 60% {
+        transform:rotate(-25deg)
+    }
+    40%, 80% {
+        transform:rotate(10deg)
+    }
+}
+@media (max-width:500px) {
+    .github-corner:hover .octo-arm {
+        animation:none
+    }
+    .github-corner .octo-arm {
+        animation:octocat-wave 560ms ease-in-out
+    }
+}
+#progress {
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    height: 3px;
+    background: linear-gradient(to right, #0d2633, #3491c1); 
 }
