--- a/docs/feui/guide/component/input.html
+++ b/docs/feui/guide/component/input.html
@@ -465,7 +465,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/lazyload.html" class="sidebar-link new">Lazyload 懒加载</a>
+      <a href="/docs/feui/guide/component/lazyload.html" class="sidebar-link">Lazyload 懒加载</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/noticebar.html" class="sidebar-link new">NoticeBar 通知栏</a>
     </li>
   
     
@@ -532,7 +546,7 @@
 <blockquote>
 <p><code>fe-cell</code> 请在<code>fe-group</code>中使用。<br>如果你想实现在输入框右边按钮切换密码明文，请使用<code>slot=right</code>实现<code>type</code>切换。 </p>
 </blockquote>
-<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Flexbox &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Input.name]: Input</div><div class="line">&#125;</div></pre></td></tr></table></figure>
+<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Input &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Input.name]: Input</div><div class="line">&#125;</div></pre></td></tr></table></figure>
 <h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-input</span> <span class="attr">title</span>=<span class="string">'value'</span> <span class="attr">v-model</span>=<span class="string">"value"</span> <span class="attr">placeholder</span>=<span class="string">"我是占位符"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-input</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
 <h4 id="不可用状态"><a href="#不可用状态" class="headerlink" title="不可用状态"></a>不可用状态</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"不可用状态"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-input</span> <span class="attr">title</span>=<span class="string">'value'</span> <span class="attr">disabled</span> <span class="attr">v-model</span>=<span class="string">"disabledValue"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-input</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
 <h4 id="设置最大值最小值"><a href="#设置最大值最小值" class="headerlink" title="设置最大值最小值"></a>设置最大值最小值</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"set min=2 and max=5"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-input</span> <span class="attr">title</span>=<span class="string">"2-5个字符"</span> <span class="attr">placeholder</span>=<span class="string">""</span> <span class="attr">:min</span>=<span class="string">"2"</span> <span class="attr">:max</span>=<span class="string">"5"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-input</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
