--- a/docs/feui/guide/component/lazyload.html
+++ b/docs/feui/guide/component/lazyload.html
@@ -465,7 +465,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/lazyload.html" class="sidebar-link current new">Lazyload 懒加载</a>
+      <a href="/docs/feui/guide/component/lazyload.html" class="sidebar-link current">Lazyload 懒加载</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/noticebar.html" class="sidebar-link new">NoticeBar 通知栏</a>
     </li>
   
     
@@ -545,6 +559,8 @@
         
           <span>← <a href="/docs/feui/guide/component/input.html">input 输入框</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/noticebar.html">NoticeBar 通知栏</a> →</span>
         
       </div>
     
