:baby_bottle: update changelog

--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -731,15 +731,7 @@
 <td style="text-align:center">-</td>
 </tr>
 <tr>
-<td style="text-align:center">466</td>
-<td style="text-align:center">Pullrefresh</td>
-<td style="text-align:center">刷新加载</td>
-<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/pullrefresh.html">https://feui.gitee.io/docs/feui/guide/component/pullrefresh.html</a></td>
-<td style="text-align:left"><a href="https://feui.gitee.io/#/pullrefresh">https://feui.gitee.io/#/pullrefresh</a></td>
-<td style="text-align:center">-</td>
-</tr>
-<tr>
-<td style="text-align:center">466</td>
+<td style="text-align:center">457</td>
 <td style="text-align:center">InlineCalendar</td>
 <td style="text-align:center">日历组件</td>
 <td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/inlinecalendar.html">https://feui.gitee.io/docs/feui/guide/component/inlinecalendar.html</a></td>
@@ -747,11 +739,43 @@
 <td style="text-align:center">-</td>
 </tr>
 <tr>
-<td style="text-align:center">467</td>
+<td style="text-align:center">458</td>
 <td style="text-align:center">Input</td>
 <td style="text-align:center">输入框</td>
 <td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/input.html">https://feui.gitee.io/docs/feui/guide/component/input.html</a></td>
 <td style="text-align:left"><a href="https://feui.gitee.io/#/input">https://feui.gitee.io/#/input</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">459</td>
+<td style="text-align:center">Lazyload</td>
+<td style="text-align:center">懒加载</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/lazyload.html">https://feui.gitee.io/docs/feui/guide/component/lazyload.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/lazyload">https://feui.gitee.io/#/lazyload</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">460</td>
+<td style="text-align:center">NoticeBar</td>
+<td style="text-align:center">通知栏</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/noticebar.html">https://feui.gitee.io/docs/feui/guide/component/noticebar.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/noticebar">https://feui.gitee.io/#/noticebar</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">-</td>
+<td style="text-align:center">-</td>
+<td style="text-align:center">-</td>
+<td style="text-align:left">-</td>
+<td style="text-align:left">-</td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">466</td>
+<td style="text-align:center">Pullrefresh</td>
+<td style="text-align:center">刷新加载</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/pullrefresh.html">https://feui.gitee.io/docs/feui/guide/component/pullrefresh.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/pullrefresh">https://feui.gitee.io/#/pullrefresh</a></td>
 <td style="text-align:center">-</td>
 </tr>
 <tr>
