:baby_bottle: edit md

--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -479,7 +479,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/noticebar.html" class="sidebar-link new">NoticeBar 通知栏</a>
+      <a href="/docs/feui/guide/component/noticebar.html" class="sidebar-link">NoticeBar 通知栏</a>
     </li>
   
     
@@ -776,6 +776,30 @@
 <td style="text-align:center">刷新加载</td>
 <td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/pullrefresh.html">https://feui.gitee.io/docs/feui/guide/component/pullrefresh.html</a></td>
 <td style="text-align:left"><a href="https://feui.gitee.io/#/pullrefresh">https://feui.gitee.io/#/pullrefresh</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">-</td>
+<td style="text-align:center">-</td>
+<td style="text-align:center">-</td>
+<td style="text-align:left">-</td>
+<td style="text-align:left">-</td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center"><h3>表单组件</h3></td>
+<td style="text-align:center"></td>
+<td style="text-align:center"></td>
+<td style="text-align:left"></td>
+<td style="text-align:left"></td>
+<td style="text-align:center"></td>
+</tr>
+<tr>
+<td style="text-align:center">501</td>
+<td style="text-align:center">Actionsheet</td>
+<td style="text-align:center">地址栏</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/actionsheet.html">https://feui.gitee.io/docs/feui/guide/component/actionsheet.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/actionsheet">https://feui.gitee.io/#/actionsheet</a></td>
 <td style="text-align:center">-</td>
 </tr>
 <tr>
