--- a/docs/feui/guide/component/noticebar.html
+++ b/docs/feui/guide/component/noticebar.html
@@ -479,7 +479,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/noticebar.html" class="sidebar-link current new">NoticeBar 通知栏</a>
+      <a href="/docs/feui/guide/component/noticebar.html" class="sidebar-link current">NoticeBar 通知栏</a>
     </li>
   
     
